Bihn is a god. asteroids moving on screen

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Asteroids!</title>
+    <style media="screen">
+      canvas {
+        border: 12px dotted cyan;
+        display: block;
+        margin: 100px auto;
+      }
+    </style>
   </head>
   <body>
-
+    <canvas id="game-canvas"></canvas>
+    <script src="bundle.js"></script>
   </body>
 </html>
