--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Asteroids!</title>
-    <style media="screen">
+    <style>
       canvas {
-        border: 12px dotted cyan;
+        border: 8px dashed brown;
         display: block;
         margin: 100px auto;
       }
@@ -13,6 +13,7 @@
   </head>
   <body>
     <canvas id="game-canvas"></canvas>
+    <script src="lib/keymaster.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
